fix(neostorage): Fix some merge issues